--- a/styles/styles.css
+++ b/styles/styles.css
@@ -32,6 +32,18 @@ body {
   background: #E5E5E5;
 }
 
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  border: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+/* ХЕДЕР */
 .navigation {
   width: 1200px;
   display: flex;
@@ -41,9 +53,12 @@ body {
 }
 
 .navigation-list {
+  display: flex;
+  flex-wrap: wrap;
   width: 500px;
   margin: 0;
   padding: 0;
+  list-style-type: none;
 
 }
 
@@ -54,26 +69,18 @@ body {
 }
 
 .navigation-item {
-  width: 1200px;
   display: flex;
   margin: 0 auto;
   justify-content: space-between;
-
-
 }
 
 .page-header {
   color: #000000;
-  /* background: #FFFFFF; */
-  /* width: 1200px; */
-  /* display: flex;
-    justify-content: space-between; */
-  /* justify-content: center;
-    margin: 0;
-    display: flex; */
 }
 
 .navigation-link {
+  display: block;
+  padding: 24px 12px;
   font-size: 20px;
   line-height: 26px;
   font-weight: 700;
@@ -83,18 +90,27 @@ body {
   text-decoration: none;
 }
 
-.main-container {
-  flex-grow: 1;
+.navigation-list .navigation-user {
+  min-width: 42px;
+  min-height: 66px;
 }
 
-.navigation-list {
-  list-style-type: none;
+.main-container {
+  flex-grow: 1;
 }
 
 .main-logo {
   background-image: url("../images/main/main-base.jpg");
   background-repeat: no-repeat;
   background-size: 100% auto;
+  padding-top: 51px;
+  padding-bottom: 82px;
+  position: relative;
+}
+
+.small-logo {
+  position: absolute;
+  bottom: 0;
 }
 
 .page-container {
@@ -108,6 +124,57 @@ body {
   margin: 0 auto;
 }
 
+.main-container-text {
+  padding-top: 63px;
+  padding-bottom: 90px;
+}
+
+.real {
+  display: block;
+  justify-content: center;
+  align-items: center;
+  padding: 92px 85px;
+}
+
+/* ДОМИК */
+.advantages-item-home {
+  background: rgba(131, 179, 211, 0.12);
+}
+
+.services {
+  width: 400px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  height: 384px;
+  text-align: center;
+}
+
+.sight {
+  width: 400px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  height: 384px;
+  text-align: center;
+
+}
+
+.advantages-item-1 {
+  background: #82B3D3;
+  width: 400px;
+  height: 384px;
+  text-align: center;
+}
+
+.advantages-item-5 {
+  background: rgba(131, 179, 211, 0.12);
+}
+
+
+
 .heading {
   font-weight: 700;
   font-size: 30px;
@@ -120,7 +187,6 @@ body {
   font-size: 22px;
   line-height: 26px;
   text-align: center;
-
 }
 
 .advantages {
@@ -131,6 +197,7 @@ body {
 .advantages-citi {
   display: flex;
   justify-content: space-between;
+
 }
 
 .bridge {
@@ -149,33 +216,34 @@ body {
   line-height: 28px;
 }
 
-.advantages-item-1 {
-  background: #82B3D3;
-  width: 400px;
-  height: 384px;
-  text-align: center;
-
-}
-
-.advantages-item-2 {
-  background: url("../images/main/photo-1.jpg");
-  background-repeat: no-repeat;
-}
-
 .advantages-item-7 {
   background: #82B3D3;
   width: 400px;
   height: 384px;
   text-align: center;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  /* padding: 92px 85px; */
 }
 
-.advantages-item-6 {
-  background: url("../images/main/photo-2.jpg");
-  background-repeat: no-repeat;
+.advantages-item-8 {
+  background: rgba(131, 179, 211, 0.12);
+}
+
+.advantages-item-9 {
+  background: rgba(131, 179, 211, 0.2);
+}
+
+.advantages-item-10 {
+  background: rgba(131, 179, 211, 0.12);
 }
 
 .interest {
   justify-content: center;
+  padding-top: 91px;
+  padding-bottom: 105px;
 }
 
 .interest-cause {
@@ -219,16 +287,22 @@ body {
   background: url("../images/main/main-footer.jpg");
   background-repeat: no-repeat;
   justify-content: center;
-
   width: 1200px;
+  padding-top: 94px;
+  padding-bottom: 94px;
 }
+
+/* ФУУТЕР */
 
 .footer-social {
   width: 1200px;
+  height: 120px;
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
   background: #FFFFFF;
+  /* padding: 40px 70px 30px 70px; */
+  /* margin-top: 0; */
 
 }
 
@@ -252,7 +326,6 @@ body {
 .subscription-button {
   justify-content: center;
   display: flex;
-
 }
 
 .contacts_phone {
@@ -260,24 +333,36 @@ body {
   line-height: 40px;
   color: #000000;
   text-decoration: none;
+  margin: 40px;
 }
 
 .footer-social-list {
+  display: flex;
+  /* flex-wrap: wrap; */
+  justify-content: space-between;
   list-style-type: none;
+  width: 200px;
+  /* margin: 0;
+  padding: 0; */
+  margin-left: 70px;
+  margin: 45px;
 
 }
 
 .footer-social-item {
   margin-right: 33.3%;
+  display: flex;
   justify-content: space-between;
-  width: 200px;
-
+  /* width: 24px;
+  height: 14px;
+  margin-right: 26px; */
 }
 
 .telephone {
   justify-content: center;
+  margin: 45px;
 }
 
-/* .about-text {
-    margin-right: auto;
-} */
+.HTML-logo {
+  margin: 49px;
+}
